--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "express": "^5.1.0",
     "express-prom-bundle": "7.0.0",
     "http-errors": "^2.0.0",
-    "jest": "^29.7.0",
     "jsonwebtoken": "9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.14.1",
@@ -40,11 +39,16 @@
     "@types/bcryptjs": "2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "4.1.6",
+    "@types/supertest": "6.0.2",
+    "supertest": "7.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "typeorm-extension": "^3.7.0",
     "typescript": "^5.8.3"
