--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,6 +29,10 @@ jobs:
           docker compose -f docker-compose.ci.yml up -d --build
           sleep 10 # aguarda banco subir
 
+      - name: Run migrations inside container
+        run: |
+          docker exec user-service npm run typeorm migration:run
+
       - name: Run tests inside container
         run: |
           docker exec user-service npm test
