--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run migrations inside container
         run: |
-          docker exec user-service npm run typeorm migration:run
+          docker exec user-service npm run migration:run
 
       - name: Run tests inside container
         run: |
